5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1712_2508.log
== TEST (2019-05-12 19:43:19) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	soma = soma + (3 +(4/factorial(i))
	i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:43:30) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	soma = soma + (3 +(4/factorial(i))
						i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:43:47) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	soma = soma + (3 +(4/factorial(i))
	i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:43:57) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	soma = soma + (3 +(4/factorial(i))
	i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:45:22) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	soma = soma + (3 +(4/factorial(i))
	i = i + 1
	

					
					
						
	

print(soma)
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:46:17) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	soma = soma + (3 +(4/factorial(i))
	i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:49:01) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	soma = soma + (3 +(4 / factorial(i))
	i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:51:35) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))
	
print(soma)
-- ERROR:
File "XXXX", line 9
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:51:45) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:52:08) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	   i = i + 1
	   soma = soma + (3 +(4 / factorial(i))
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:52:51) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	i = i + 1
   soma = soma + (3 +(4 / factorial(i))

print(soma)
-- ERROR:
File "XXXX", line 7
    soma = soma + (3 +(4 / factorial(i))
                                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:53:13) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))

print(soma)
-- ERROR:
File "XXXX", line 9
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 19:53:30) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))


						print(soma)
-- EXECUTION TIME:
0.215079
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 10
    print(soma)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:53:33) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))


						print(soma)
-- ERROR:
File "XXXX", line 10
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:53:42) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while(n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))


print(soma)
-- ERROR:
File "XXXX", line 10
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:53:48) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))


print(soma)
-- ERROR:
File "XXXX", line 10
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:55:17) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))
   print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 19:55:39) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:41:12) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:41:26) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))

-- ERROR:
File "XXXX", line 8
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:41:33) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i))
-- ERROR:
File "XXXX", line 8
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:41:50) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i)))
-- ERROR:
File "XXXX", line 8
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:42:01) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i)))
print(soma)
-- OUTPUT:
21.866666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:42:31) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i)))
print(soma)
-- OUTPUT:
21.866666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:43:36) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i + 3)))
print(soma)
-- OUTPUT:
15.206448412698412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:44:47) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i + 3) * factorial(-i))
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:45:06) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i + 3) * factorial(-i)))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (3 +(4 / factorial(i + 3) * factorial(-i)))
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:45:44) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i + 3) * (-factorial(i))))
print(soma)
-- OUTPUT:
14.702380952380953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:46:05) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	soma = soma + (3 +(4 / factorial(i + 3) * (-factorial(i))))
print(soma)
-- OUTPUT:
14.702380952380953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:23:56) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	sinal = + 4
	soma = soma + (3 +(sinal / factorial(i + 3) * (factorial(i))))
	sinal = -sinal
	i = i + 1
print(soma)
-- OUTPUT:
9.211904761904762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:24:29) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	sinal = + 4
	soma = soma + (3 +(sinal / factorial(i + 3) * (factorial(i))))
	sinal = -sinal
	i = i + 1
print(soma)
-- OUTPUT:
9.211904761904762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:24:35) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	sinal = + 4
	soma = soma + (3 +(sinal / factorial(i + 3) * (factorial(i))))
	sinal = -sinal
	i = i + 1
print(soma)
-- OUTPUT:
9.211904761904762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:24:52) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	sinal = + 4
	soma = soma + (3 +(sinal + i/ factorial(i + 3) * (factorial(i))))
	sinal = -sinal
	i = i + 1
print(soma)
-- OUTPUT:
21.08154761904762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:25:25) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	sinal = + 4
	soma = soma + (3 +(sinal + i/ factorial(i + 3) 
	sinal = -sinal
	i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 9
    sinal = -sinal
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:25:32) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	sinal = + 4
	soma = soma + (3 +(sinal + i/ factorial(i + 3)) 
	sinal = -sinal
	i = i + 1
print(soma)
-- ERROR:
File "XXXX", line 9
    sinal = -sinal
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:25:38) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
from math import*
while (n > i):
	i = i + 1
	sinal = + 4
	soma = soma + (3 +(sinal + i/ factorial(i + 3))) 
	sinal = -sinal
	i = i + 1
print(soma)
-- OUTPUT:
21.04595734126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:09:33) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
p = 3
d1 = 2
d2 = 3
d3 = 4
if n == 1:
	print(p)
else:
	while i < (n - 1):
		p = p + (soma*(4/(d1*d2*d3)))
		if soma == 1:
			soma = -1
		else:
			s = 1
		i = i + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:10:02) 
-- CODE:
n = int(input("termos: "))
soma = 0
i = 0
p = 3
d1 = 2
d2 = 3
d3 = 4
if n == 1:
	print(p)
else:
	while i < (n - 1):
		p = p + (soma*(4/(d1*d2*d3)))
		if soma == 1:
			soma = -1
		else:
			s = 1
		i = i + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- EXECUTION TIME:
0.132211
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.0
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:11:37) 
-- CODE:
n = int(input("termos: "))

i = 0
p = 3
d1 = 2
d2 = 3
d3 = 4
s = 1
if n == 1:
	print(p)
else:
	while i < (n - 1):
		p = p + (soma*(4/(d1*d2*d3)))
		if soma == 1:
			soma = -1
		else:
			s = 1
		i = i + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    p = p + (soma*(4/(d1*d2*d3)))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:12:18) 
-- CODE:
n = int(input("termos: "))

i = 0
p = 3
d1 = 2
d2 = 3
d3 = 4
s = 1
if n == 1:
	print(p)
else:
	while i < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		i = i + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:12:25) 
-- CODE:
n = int(input("termos: "))

i = 0
p = 3
d1 = 2
d2 = 3
d3 = 4
s = 1
if n == 1:
	print(p)
else:
	while i < (n - 1):
		p = p + (s*(4/(d1*d2*d3)))
		if s == 1:
			s = -1
		else:
			s = 1
		i = i + 1
		d1 = d1 + 2
		d2 = d2 + 2
		d3 = d3 + 2
	print(round(p, 8))
-- EXECUTION TIME:
0.234891
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
